# trusted-peripherals

./: .gitignore  CMakeLists.txt  Kconfig  README.org  build_emulated.sh  build_trusted.sh  build_untrusted.sh  flash_trusted.sh  flash_untrusted.sh  keys.h  prj.conf  tf-m_8b6146261.patch  values.txt
boards/: mps2_an521.conf  mps2_an521_ns.conf  nucleo_l552ze_q.conf  nucleo_l552ze_q_ns.conf  nucleo_l552ze_q_ns.overlay  nucleo_l552ze_q_ns.overlay_normal
driver/oled_driver/: main.h
driver/oled_driver/Config/: DEV_Config.c
driver/oled_driver/Example/: test.h
driver/oled_driver/GUI/: GUI_Paint.c
driver/oled_driver/OLED/: OLED_0in96.h
oled_driver/: README.org
oled_driver/Config/: DEV_Config.h
oled_driver/Example/: OLED_0in96_test.c
psa_crypto/: CMakeLists.txt  error.org
sample/: tfm_config.conf
sample/psa_crypto/boards/: nucleo_l552ze_q_ns.overlay
sample/sensor_mbed/: build.sh  mbed-os  mbed_app.json
sample/sensor_zephyr/: build.sh  prj.conf  sample.yaml
sample/sensor_zephyr/src/: main.c
sample/tfm_psa_test/: build.sh
sample/tfm_regression_test/: output.txt
sample/tfm_secure_partition/: build.sh  error.txt
sample/trusted_delivery/: CMakeLists.txt  build_trusted.sh  prj.conf
sample/trusted_delivery/boards/: nucleo_l552ze_q.overlay
sample/trusted_delivery/src/: main.c  trusted_peripheral.h  trusted_peripheral_ns.c
sample/trusted_delivery/trusted_peripheral/: CMakeLists.txt  tfm_manifest_list.yaml.in  tfm_trusted_peripheral.yaml  trusted_peripheral.c
sensor_mbed/: .mbed  CMakeLists.txt  config_params.txt  main.cpp
sensor_zephyr/: CMakeLists.txt
sensor_zephyr_hal/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
sensor_zephyr_hal/boards/: nucleo_l552ze_q.overlay  nucleo_l552ze_q_ns.overlay
sensor_zephyr_hal/src/: main.c  oled_driver
sensor_zephyr_trusted/: CMakeLists.txt  README.org  prj.conf  sample.yaml
sensor_zephyr_trusted/boards/: nucleo_l552ze_q_ns.overlay
sensor_zephyr_trusted/src/: main.c  trusted_peripheral_ns.c  trusted_peripheral_ns.h
sensor_zephyr_trusted/trusted_peripheral/: CMakeLists.txt  tfm_trusted_peripheral.yaml  trusted_peripheral.c
src/: main.c  trusted_peripheral.h  trusted_peripheral_ns.c
tests/: build_times.txt  footprint.txt  get_values.py  measure_transmission.py  perf_cs_emulated_in_ns.txt  perf_cs_emulatedipc_in_ns.txt  perf_cs_emulatedsfn_in_ns.txt  perf_cs_trustedipc_in_ns.txt  perf_cs_trustedsfn_in_ns.txt  perf_cs_untrusted_in_ns.txt  perf_tc_emulated_in_ns.txt  perf_tc_emulatedipc_in_ns.txt  perf_tc_emulatedsfn_in_ns.txt  perf_tc_trustedipc_in_ns.txt  perf_tc_trustedsfn_in_ns.txt  perf_tc_untrusted_in_ns.txt  perf_td_emulated_in_ns.txt  perf_td_emulatedipc_in_ns.txt  perf_td_emulatedsfn_in_ns.txt  perf_td_trustedipc_in_ns.txt  perf_td_trustedsfn_in_ns.txt  perf_td_untrusted_in_ns.txt  perf_th_emulated_in_ns.txt  perf_th_emulatedipc_in_ns.txt  perf_th_emulatedsfn_in_ns.txt  perf_th_trustedipc_in_ns.txt  perf_th_trustedsfn_in_ns.txt  perf_th_untrusted_in_ns.txt  perf_trustedsfn_tc_in_ns.txt  perf_tt_emulated_in_ns.txt  perf_tt_emulatedipc_in_ns.txt  perf_tt_emulatedsfn_in_ns.txt  perf_tt_trustedipc_in_ns.txt  perf_tt_trustedsfn_in_ns.txt  perf_tt_untrusted_in_ns.txt  perf_untrusted_tc_in_ns.txt  trans_tc_trusted_in_ms_1.txt  trans_tc_trusted_in_ms_10.txt  trans_tc_trusted_in_ms_100.txt  trans_tc_untrusted_in_ms_1.txt  (+30 more)
tfm_ipc/: build.sh
trusted_peripheral/: CMakeLists.txt  tfm_manifest_list.yaml.in  tfm_trusted_peripheral.yaml  trusted_peripheral.c
